# BASHAR

./: .gitignore  README.md  package.xml  setup.cfg  setup.py  test_integration.py
examples/: basic_usage.py  hardware_loop.py  ros2_node.py
src/bashar/: __init__.py  api.py
src/bashar/core/: controller.py  dynamics.py  kinematics.py  trajectory.py
src/bashar/utils/: config_parser.py  logger.py  model_compiler.py
tests/: test_core.py
